src/k8s/web-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: app
    part: web
    version: "1.0"
spec:
  selector:
    matchLabels:
      app: app
      part: web
  replicas: 1
  template:
    metadata:
      labels:
        app: app
        part: web
        version: "1.0"
    spec:
      containers:
        - name: "web"
          image: "web"
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              scheme: HTTP
              port: http
            initialDelaySeconds: 10
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              scheme: HTTP
              port: http
            initialDelaySeconds: 10
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
