src/k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: app
    part: api
    version: "1.0"
spec:
  selector:
    app: app
    part: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
