src/k8s/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: app
    part: web
    version: "1.0"
spec:
  selector:
    app: app
    part: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
